added rofi, scrot and ImageMagick

--- a/roles/install-pkgs/tasks/main.yml
+++ b/roles/install-pkgs/tasks/main.yml
@@ -17,5 +17,8 @@
        - rxvt-unicode
        - feh
        - compton
+       - rofi
+       - scrot
+       - ImageMagick
    tags:
      - install-pkgs
