--- a/setup.yml
+++ b/setup.yml
@@ -1,8 +1,10 @@
 ---
  - name: Conifugre System
-   hosts: local
+   hosts: 127.0.0.1
+   connection: local
    roles:
      - install-pkgs
      - xenodm
+     - dns
      - add-user
      - user-config
