--- a/roles/xenodm/tasks/main.yml
+++ b/roles/xenodm/tasks/main.yml
@@ -19,6 +19,9 @@
      - setup-doas
 
  - name: Config Xenodm login screen
+   become: yes
+   become_method: doas
+   become_user: root
    copy:
      src: ../templates/Xresources
      dest: /etc/X11/xenodm/Xresources
